# padelbot

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.ini  config.toml  mypy.ini  pyproject.toml
.github/: dependabot.yml  release-please-config.json
.github/workflows/: deploy.yml  pr-name-validator.yml  release-please.yml  test.yml
naco-backend-client/: README.md  pyproject.toml
naco-backend-client/naco_backend_client/: __init__.py
naco-backend-client/naco_backend_client/api/tournaments/: create_tournament_from_spond.py
naco-backend-client/naco_backend_client/api/users/: create_user.py  list_users.py
naco-backend-client/naco_backend_client/models/: __init__.py  paginated_response_user.py  spond_tournament_create.py  spond_tournament_create_response.py  user.py  user_create.py
respondr/: logger.py  main.py
src/: main.py  webapp.py
src/padelbot/: config.py  logger.py  padelbot.py  rulesets.py  utils.py
src/padelbot/actions/: __init__.py  actionbase.py  create_tournament.py  naco_create_tournament.py
src/padelbot/core/: config.py  logger.py
src/padelbot/naco/: registrar.py  tournament.py
src/padelbot/rules/: __init__.py  max_events_per_week.py  quarantine_after_event.py  rulebase.py
src/templates/: log_viewer.html
tests/padelbot/: test_padelbot.py  test_utils.py
tests/padelbot/actions/: test_create_tournament.py  test_naco_create_tournament.py
tests/padelbot/naco/: test_tournament.py
tests/padelbot/rules/: test_max_events_per_week.py  test_quarantine_after_event.py
tools/: dump_data.py  generate_client.py
