[project]
name = "padelbot"
version = "1.0.5"
description = "An app to simplify the life of managing the Equinor BIL Trondheim padel group"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "configparser>=7.2.0",
    "python-dotenv>=1.1.1",
    "spond>=1.1.1",
    "starlette>=0.48.0",
    "types-aiofiles>=24.1.0.20250822",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = ["ruff>=0.13.0"]
